初始化提交：完成小程序基础功能开发

--- a/app.json
+++ b/app.json
@@ -5,7 +5,8 @@
     "pages/profile/profile",
     "pages/logs/logs",
     "pages/ai-chat/index",
-    "pages/scan-card/index"
+    "pages/scan-card/index",
+    "pages/order-query/index"
   ],
   "window": {
     "navigationBarTextStyle": "black",
