feat: 优化订单查询页面UI样式 - 调整卡片背景透明度为0.2，移除蒙版效果，调整文字颜色与卡片颜色保持一致，优化图标显示效果

--- a/app.json
+++ b/app.json
@@ -1,9 +1,10 @@
 {
   "pages": [
+    "pages/login/login",
     "pages/index/index",
+    "pages/bind/bind",
     "pages/message/message",
     "pages/profile/profile",
-    "pages/logs/logs",
     "pages/ai-chat/index",
     "pages/scan-card/index",
     "pages/order-query/index"
