feat: 添加审批事项列表页面，优化首页审批模块

--- a/app.json
+++ b/app.json
@@ -7,7 +7,11 @@
     "pages/profile/profile",
     "pages/ai-chat/index",
     "pages/scan-card/index",
-    "pages/order-query/index"
+    "pages/order-query/index",
+    "pages/customer/index",
+    "pages/internal-inquiry/index",
+    "pages/quote-manage/index",
+    "pages/approval-list/index"
   ],
   "window": {
     "navigationBarTextStyle": "black",
